--- a/.classpath
+++ b/.classpath
@@ -3,6 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/bmole/Downloads/obd-java-api-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmole/workspace/racedash/Medusa-7.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmole/workspace/racedash/obd-java-api-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/bmole/workspace/racedash/RXTXcomm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
